# theseus-ship

./: .clang-format  .gitignore  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HACKING.md  KWinDBusInterfaceConfig.cmake.in  Messages.sh  README.md  abstract_client.cpp  abstract_client.h  abstract_opengl_context_attribute_builder.cpp  abstract_opengl_context_attribute_builder.h  abstract_output.cpp  abstract_output.h  abstract_wayland_output.cpp  abstract_wayland_output.h  activation.cpp  activities.cpp  activities.h  appmenu.cpp  appmenu.h  atoms.cpp  atoms.h  client_machine.cpp  client_machine.h  commitlint.config.js  composite.cpp  composite.h  config-kwin.h.cmake  config-theseus-ship.h.cmake  cursor.cpp  dbusinterface.cpp  dbusinterface.h  debug_console.cpp  debug_console.h  deleted.cpp  deleted.h  (+138 more)
autotests/: CMakeLists.txt  fakeeffectplugin.cpp  fakeeffectplugin_version.cpp  gestures.cpp  mock_abstract_client.cpp  mock_abstract_client.h  mock_effectshandler.cpp  mock_effectshandler.h  mock_workspace.cpp  mock_workspace.h  on_screen_notifications.cpp  onscreennotificationtest.cpp  onscreennotificationtest.h  opengl_context_attribute_builder.cpp  opengl_context_attribute_builder_test.cpp  test_builtin_effectloader.cpp  test_client_machine.cpp  test_gestures.cpp  test_plugin_effectloader.cpp  test_screen_paint_data.cpp  test_scripted_effectloader.cpp  test_virtual_desktops.cpp  test_window_paint_data.cpp  test_x11_timestamp_update.cpp  test_xcb_size_hints.cpp  test_xcb_window.cpp  test_xcb_wrapper.cpp  test_xkb.cpp  testutils.h  window_paint_data.cpp  xcb_window.cpp  xkb.cpp
autotests/integration/: CMakeLists.txt  activation.cpp  activation_test.cpp  activities_test.cpp  bindings.cpp  bindings_test.cpp  buffer_size_change.cpp  buffer_size_change_test.cpp  client_machine.cpp  colorcorrect_nightcolor_test.cpp  dbus_interface.cpp  dbus_interface_test.cpp  debug_console.cpp  debug_console_test.cpp  decoration_input.cpp  decoration_input_test.cpp  desktop_window_x11.cpp  desktop_window_x11_test.cpp  dont_crash_aurorae_destroy_deco.cpp  dont_crash_cancel_animation.cpp  dont_crash_cursor_physical_size_empty.cpp  dont_crash_empty_deco.cpp  dont_crash_glxgears.cpp  dont_crash_no_border.cpp  dont_crash_reinitialize_compositor.cpp  dont_crash_useractions_menu.cpp  generic_scene_opengl.h  generic_scene_opengl_test.cpp  generic_scene_opengl_test.h  gestures.cpp  global_shortcuts.cpp  globalshortcuts_test.cpp  idle.cpp  idle_inhibition.cpp  idle_inhibition_test.cpp  idle_test.cpp  input_method.cpp  input_stacking_order.cpp  internal_window.cpp  keyboard_keymap.cpp  (+91 more)
autotests/libinput/: CMakeLists.txt  context_test.cpp
autotests/libkwineffects/: CMakeLists.txt  kwinglplatformtest.cpp  mock_gl.cpp  mock_gl.h  opengl_platform.cpp  timeline.cpp  timelinetest.cpp  window_quad_list.cpp  windowquadlisttest.cpp
autotests/libxrenderutils/: CMakeLists.txt  blendpicture_test.cpp
autotests/tabbox/: CMakeLists.txt  desktop_chain.cpp  mock_tabbox_client.cpp  mock_tabbox_client.h  mock_tabbox_handler.cpp  mock_tabbox_handler.h  mock_tabboxclient.cpp  mock_tabboxclient.h  mock_tabboxhandler.cpp  mock_tabboxhandler.h  tabbox_client_model.cpp  tabbox_config.cpp  tabbox_handler.cpp  test_desktopchain.cpp  test_tabbox_clientmodel.cpp  test_tabbox_clientmodel.h  test_tabbox_config.cpp  test_tabbox_handler.cpp
effect/lib/: CMakeLists.txt  KWinEffectsConfig.cmake.in  Messages.sh  kwinconfig.h.cmake  kwinglobals.h
effects/coverswitch/: CMakeLists.txt  coverswitch.cpp  coverswitch.h  coverswitch.qrc  coverswitch_config.cpp  main.cpp  metadata.json
effects/cubeslide/: CMakeLists.txt  cubeslide.cpp  cubeslide.h  cubeslide_config.cpp  cubeslide_config.h  main.cpp  metadata.json
effects/flipswitch/: CMakeLists.txt  flipswitch.cpp  flipswitch.h  flipswitch_config.cpp  flipswitch_config.h  main.cpp  metadata.json
kcmkwin/kwinrules/: CMakeLists.txt  kcm_kwinrules.desktop  kcm_kwinrules.json  kcmrules.cpp  kcmrules.h  kwinsrc.cpp  main.cpp  optionsmodel.cpp  optionsmodel.h  rulebookmodel.cpp  rulebookmodel.h  ruleitem.cpp  ruleitem.h  rulesdialog.cpp  rulesdialog.h  rulesmodel.cpp  rulesmodel.h
kcms/: CMakeLists.txt
kcms/common/: CMakeLists.txt  Messages.sh  effectsmodel.cpp  effectsmodel.h  generic_scripted_config.cpp  generic_scripted_config.h
kcms/compositing/: CMakeLists.txt  Messages.sh  compositing.ui  kwincompositing.json  kwincompositing_setting.kcfg  kwincompositing_setting.kcfgc  kwincompositingdata.cpp  kwincompositingdata.h  main.cpp
kcms/decoration/: CMakeLists.txt  Messages.sh  decorationmodel.cpp  decorationmodel.h  kcm.cpp  kcm.h  kcm_kwindecoration.json  kwin-applywindowdecoration.cpp  kwindecorationsettings.kcfg  kwindecorationsettings.kcfgc  utils.cpp  utils.h  window-decorations.knsrc.cmake
kcms/desktop/: CMakeLists.txt  Messages.sh  animationsmodel.cpp  animationsmodel.h  desktopsmodel.cpp  desktopsmodel.h  virtualdesktops.cpp  (+6 more)
lib/: CMakeLists.txt
plugins/: CMakeLists.txt
scripting/: CMakeLists.txt  Messages.sh  client_model.cpp  client_model.h  dbus_call.cpp  dbus_call.h  dbuscall.cpp  dbuscall.h  desktop_background_item.cpp  desktop_background_item.h  effect.cpp  effect.h  generic_scripted_config.cpp  generic_scripted_config.h  genericscriptedconfig.cpp  genericscriptedconfig.h  js_engine_global_methods_wrapper.cpp  js_engine_global_methods_wrapper.h  kwinscript.desktop  meta.cpp  meta.h  platform.cpp  platform.h  screen_edge_handler.cpp  screen_edge_item.cpp  screen_edge_item.h  screenedgeitem.cpp  screenedgeitem.h  script.cpp  script.h  script_timer.h  scriptedeffect.cpp  scriptedeffect.h  scripting.cpp  scripting.h  scripting_logging.cpp  scripting_logging.h  scripting_model.cpp  scripting_model.h  scriptingutils.cpp  (+17 more)
tests/: CMakeLists.txt  cursorhotspottest.cpp  inputmethodstest.qml  libinputtest.cpp  normalhintsbasesizetest.cpp  pointerconstraintstest.cpp  pointerconstraintstest.h  pointerconstraintstest.qml  pointergesturestest.cpp  pointergesturestest.qml  screenedgeshowtest.cpp  unmapdestroytest.qml  x11shadowreader.cpp
(+3383 files in other folders)
